--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.application.name=noticeboard
 
 # noticeboard.db.host=localhost
 # noticeboard.db.port=6379
-# noticeboard.db.database=0
 # noticeboard.db.username=
 # noticeboard.db.password=
 
 
-spring.data.redis.host=${REDISHOST}
-spring.data.redis.port=${REDISPORT}
-spring.data.redis.username=${REDISUSER}
-spring.data.redis.password=${REDIS_PASSWORD}
+noticeboard.dbhost=${REDISHOST}
+noticeboard.dbport=${REDISPORT}
+noticeboard.dbusername=${REDISUSER}
+noticeboard.dbpassword=${REDIS_PASSWORD}
+noticeboard.db.database=0
