--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.application.name=noticeboard
 # noticeboard.db.password=
 
 
-noticeboard.dbhost=${REDISHOST}
-noticeboard.dbport=${REDISPORT}
-noticeboard.dbusername=${REDISUSER}
-noticeboard.dbpassword=${REDIS_PASSWORD}
+noticeboard.db.host=${REDISHOST}
+noticeboard.db.port=${REDISPORT}
+noticeboard.db.username=${REDISUSER}
+noticeboard.db.password=${REDIS_PASSWORD}
 noticeboard.db.database=0
